--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
